--- a/src/templates/includes/footer.jade
+++ b/src/templates/includes/footer.jade
@@ -1,20 +1,48 @@
 .b-footer
     .container
         .row
-            .col-xs-4
+            .col-xs-3.text-center
                 a.b-footer__logo(href='#')
 
                 .b-social-links
                     .b-social-links__item
-                        .b-social-links__link.b-social-links__link_vk
+                        a.b-social-links__link.b-social-links__link_vk(href='#')
                     .b-social-links__item
-                        .b-social-links__link.b-social-links__link_fb
+                        a.b-social-links__link.b-social-links__link_fb(href='#')
                     .b-social-links__item
-                        .b-social-links__link.b-social-links__link_tw
+                        a.b-social-links__link.b-social-links__link_tw(href='#')
                     .b-social-links__item
-                        .b-social-links__link.b-social-links__link_instagram
+                        a.b-social-links__link.b-social-links__link_instagram(href='#')
                     .b-social-links__item
-                        .b-social-links__link.b-social-links__link_youtube
+                        a.b-social-links__link.b-social-links__link_youtube(href='#')
                     .b-social-links__item
-                        .b-social-links__link.b-social-links__link_spark
-                .b-footer__copyright © Студия Толкунова Дмитрия,#[br]2010‐2016
+                        a.b-social-links__link.b-social-links__link_spark(href='#')
+                .b-footer__copyright.clearfix
+                    .text-center.pull-left © Студия Толкунова Дмитрия,#[br]2010‐2016
+            .col-xs-4.col-xs-offset-1
+                .b-footer-menu
+                    p.b-footer-menu__header Студия
+
+                    .row
+                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Портфолио
+                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Вакансии
+                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Стоимость
+                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Партнерка
+                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Отзывы
+                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Сервисы
+                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Клиенты
+                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') События
+                        .col-xs-5: .b-footer-menu__item: a.b-footer-menu__link(href='#') Контакты
+            .col-xs-4
+                .b-footer-menu
+                    p.b-footer-menu__header Справочник клиента
+
+                    .row
+                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='#') Раздел блога
+                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='#') Раздел блога
+                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='#') Раздел блога
+                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='#') Раздел блога
+                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='#') Раздел блога
+                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='#') Раздел блога
+                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='#') Раздел блога
+                        .col-xs-6: .b-footer-menu__item: a.b-footer-menu__link(href='#') Раздел блога
