--- a/src/blocks/b-portfolio-filter/b-portfolio-filter.less
+++ b/src/blocks/b-portfolio-filter/b-portfolio-filter.less
@@ -17,14 +17,14 @@
 	position: relative;
 
 	&:not(.b-portfolio-filter__item_active) .b-portfolio-filter__title {
-		border-bottom: 2px dashed rgba(37, 37, 37, .05);
+		border-bottom: 2px dotted rgba(37, 37, 37, .05);
 	}
 
 	&:hover, &:active, &:focus {
 		text-decoration: none;
 
 		.b-portfolio-filter__title {
-			border-bottom: 2px dashed;
+			border-bottom: 2px dotted;
 		}
 	}
 }
