--- a/src/blocks/b-portfolio/b-portfolio.less
+++ b/src/blocks/b-portfolio/b-portfolio.less
@@ -9,6 +9,7 @@
 	font-size: 30px;
 	font-weight: bold;
 	text-align: center;
+	margin-top: 0;
 }
 
 .b-portfolio__filter {
@@ -132,5 +133,5 @@
 }
 
 .b-portfolio__button-text {
-	border-bottom: 2px dashed @text-muted;
+	border-bottom: 2px dotted @text-muted;
 }
