fix portfolio start make portfolio-item view some fixes

--- a/src/templates/includes/header.jade
+++ b/src/templates/includes/header.jade
@@ -9,7 +9,7 @@ p.browserupgrade.
         .clearfix
             a.b-header__logo(href='#')
             .b-header__menu.b-header-menu
-                .b-header-menu__item: a.b-header-menu__link(href='#') Портфолио
+                .b-header-menu__item: a.b-header-menu__link(href='portfolio_type_1.html') Портфолио
                 .b-header-menu__item: a.b-header-menu__link(href='#') Отзывы
                 .b-header-menu__item: a.b-header-menu__link(href='#') Стоимость
                 .b-header-menu__item: a.b-header-menu__link(href='#') Справочник клиента
