--- a/src/templates/portfolio_type_2.jade
+++ b/src/templates/portfolio_type_2.jade
@@ -3,7 +3,7 @@ extends ./layouts/layout.jade
 block content
     .b-page
         .container
-            h1.b-page__title.text-center В портфолио 985 баннеров
+            h1.b-page__title В портфолио 985 баннеров
 
             .b-filter
                 a.b-filter__item(href='portfolio_type_1.html'): span.b-filter__title Последние
