--- a/src/blocks/b-page/b-page.less
+++ b/src/blocks/b-page/b-page.less
@@ -8,4 +8,17 @@
 .b-page__title {
 	margin-top: 0;
 	margin-bottom: 22px;
+	text-align: center;
+	font-weight: bold;
+	font-size: 40px;
+}
+
+.b-page__link {
+	color: @text-color;
+	border-bottom: 3px solid rgba(37, 37, 37, .05);
+
+	&:hover, &:active, &:focus {
+		text-decoration: none;
+		border-bottom-color: @link-hover-color;
+	}
 }
