--- a/src/blocks/b-portfolio/b-portfolio.less
+++ b/src/blocks/b-portfolio/b-portfolio.less
@@ -10,6 +10,7 @@
 	font-weight: bold;
 	text-align: center;
 	margin-top: 0;
+	margin-bottom: 20px;
 }
 
 .b-portfolio__filter {
@@ -133,5 +134,5 @@
 }
 
 .b-portfolio__button-text {
-	border-bottom: 2px dotted @text-muted;
+	border-bottom: 2px dotted rgba(37, 37, 37, .15);
 }
