--- a/src/less/bootstrap/variables.less
+++ b/src/less/bootstrap/variables.less
@@ -50,7 +50,7 @@
 @font-family-base:        @font-family-primary;
 
 @font-size-base:          18px;
-@font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
+@font-size-large:         ceil((@font-size-base * 1.33)); // ~18px
 @font-size-small:         ceil((@font-size-base * 0.85)); // ~12px
 
 @font-size-h1:            floor((@font-size-base * 2.25)); // ~36px
@@ -850,7 +850,7 @@
 //** Horizontal offset for forms and lists.
 @component-offset-horizontal: 180px;
 //** Text muted color
-@text-muted:                  rgba(37,37,37,.15);
+@text-muted:                  #b2b2b2;
 //** Abbreviations and acronyms border color
 @abbr-border-color:           @gray-light;
 //** Headings small color
