fix header button

--- a/src/templates/includes/header.jade
+++ b/src/templates/includes/header.jade
@@ -14,4 +14,4 @@ p.browserupgrade.
                 .b-header-menu__item: a.b-header-menu__link(href='#') Стоимость
                 .b-header-menu__item: a.b-header-menu__link(href='#') Справочник клиента
                 .b-header-menu__item: a.b-header-menu__link(href='#') Контакты
-            a.b-header__button(href='#') Заказать баннер
+            a.btn.btn-success.btn-lg.b-header__button(href='#') Заказать баннер
