--- a/src/blocks/b-header/b-header.less
+++ b/src/blocks/b-header/b-header.less
@@ -27,17 +27,13 @@
 
 .b-header__button {
 	float: right;
-	display: inline-block;
-	color: #ffffff;
 	font-weight: bold;
-	font-size: 24px;
-	background: #acc000;
-	padding: 14px 20px;
-	margin-top: 52px;
+	padding-left: 19px;
+	padding-right: 19px;
+	margin-top: 53px;
 
 	&:hover, &:active, &:focus {
-		background: #9eb000;
-		color: #fff;
-		text-decoration: none;
+		background-color: #9eb000;
+		border-color: #9eb000;
 	}
 }
