--- a/src/templates/includes/head.jade
+++ b/src/templates/includes/head.jade
@@ -18,6 +18,7 @@ head
     block scripts
         script(src='assets/vendor/jquery/dist/jquery.min.js')
         script(src='assets/vendor/bootstrap/dist/js/bootstrap.min.js')
+        script(src='assets/vendor/masonry/dist/masonry.pkgd.min.js')
         //script(src='assets/vendor/slick-carousel/slick/slick.min.js')
         //script(src='assets/vendor/fancybox/source/jquery.fancybox.pack.js?v=2.1.5')
         script(src='assets/js/script.js')
