done reviews content types (image, video, text)

--- a/src/blocks/b-reviews/b-reviews.less
+++ b/src/blocks/b-reviews/b-reviews.less
@@ -145,6 +145,15 @@
 
 }
 
+.b-reviews__content_type_image {
+	background: left top repeat url("../../assets/img/reviews-list-type-mail-pattern.png");
+	padding: 9px 0 2px;
+}
+
+.b-reviews__content_type_text {
+	padding: 0 17px 3px;
+}
+
 .b-reviews__footer {
 	.clearfix();
 	padding: 15px 17px 13px;
