--- a/src/templates/reviews.jade
+++ b/src/templates/reviews.jade
@@ -34,7 +34,8 @@ block content
                             a.b-reviews__type(href='#') Видеоотзывы
                         .text-center: a.b-reviews__title(href='#') 1ДСКиКО
                         .b-reviews__content
-                            img.img-responsive(src='http://placehold.it/320x180')
+                            .b-review.b-review_video
+                                a.b-review__link(href='#'): img.img-responsive(src='http://placehold.it/320x180')
                         .b-reviews__footer
                             span.b-reviews__date 22 июня 2016
                             a.b-reviews__link(href='#') Оригинал отзыва
@@ -42,8 +43,9 @@ block content
                         .b-reviews__header
                             a.b-reviews__type(href='#') Рекомендательные письма
                         .text-center: a.b-reviews__title(href='#') Газелькин
-                        .b-reviews__content
-                            img.img-responsive(src='http://placehold.it/320x330')
+                        .b-reviews__content.b-reviews__content_type_image
+                            .b-review.b-review_image
+                                a.b-review__link(href='#'): img.img-responsive(src='http://placehold.it/196x264')
                         .b-reviews__footer
                             span.b-reviews__date 5 февраля 2015
                             a.b-reviews__link(href='#') Оригинал отзыва
@@ -52,7 +54,7 @@ block content
                             a.b-reviews__type(href='#') Социальные сети
                             .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_fb
                         .text-center: a.b-reviews__title(href='#') Exante
-                        .b-reviews__content
+                        .b-reviews__content.b-reviews__content_type_text
                             p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                         .b-reviews__footer
                             span.b-reviews__date 11 января 2015
@@ -62,7 +64,7 @@ block content
                             a.b-reviews__type(href='#') Социальные сети
                             .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_vk
                         .text-center: a.b-reviews__title(href='#') Exante
-                        .b-reviews__content
+                        .b-reviews__content.b-reviews__content_type_text
                             p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                         .b-reviews__footer
                             span.b-reviews__date 11 января 2015
@@ -72,7 +74,7 @@ block content
                             a.b-reviews__type(href='#') Социальные сети
                             .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_tw
                         .text-center: a.b-reviews__title(href='#') Exante
-                        .b-reviews__content
+                        .b-reviews__content.b-reviews__content_type_text
                             p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                         .b-reviews__footer
                             span.b-reviews__date 11 января 2015
@@ -82,7 +84,7 @@ block content
                             a.b-reviews__type(href='#') Социальные сети
                             .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_instagram
                         .text-center: a.b-reviews__title(href='#') Exante
-                        .b-reviews__content
+                        .b-reviews__content.b-reviews__content_type_text
                             p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                         .b-reviews__footer
                             span.b-reviews__date 11 января 2015
@@ -92,7 +94,7 @@ block content
                             a.b-reviews__type(href='#') Социальные сети
                             .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_ok
                         .text-center: a.b-reviews__title(href='#') Exante
-                        .b-reviews__content
+                        .b-reviews__content.b-reviews__content_type_text
                             p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                         .b-reviews__footer
                             span.b-reviews__date 11 января 2015
@@ -101,7 +103,7 @@ block content
                         .b-reviews__header
                             a.b-reviews__type(href='#') Fl.ru
                         .text-center: a.b-reviews__title(href='#') Exante
-                        .b-reviews__content
+                        .b-reviews__content.b-reviews__content_type_text
                             p Задание было выполнено! Качество радует! Рекомендую!
                         .b-reviews__footer
                             span.b-reviews__date 11 января 2015
@@ -111,7 +113,7 @@ block content
                             a.b-reviews__type(href='#') Форумы
                             .b-reviews__icon: .b-reviews__forum-icon.b-reviews__forum-icon_prcy
                         .text-center: a.b-reviews__title(href='#') Exante
-                        .b-reviews__content
+                        .b-reviews__content.b-reviews__content_type_text
                             p Регулярно заказываем баннеры. Цены, качество, сроки - все отлично :)
                         .b-reviews__footer
                             span.b-reviews__date 11 января 2015
@@ -121,7 +123,7 @@ block content
                             a.b-reviews__type(href='#') Форумы
                             .b-reviews__icon: .b-reviews__forum-icon.b-reviews__forum-icon_cypr
                         .text-center: a.b-reviews__title(href='#') Exante
-                        .b-reviews__content
+                        .b-reviews__content.b-reviews__content_type_text
                             p Регулярно заказываем баннеры. Цены, качество, сроки - все отлично :)
                         .b-reviews__footer
                             span.b-reviews__date 11 января 2015
