add modals to reviews

--- a/src/less/common.less
+++ b/src/less/common.less
@@ -99,3 +99,18 @@ body {
 	background-color: #9eb000;
 	border-color: #9eb000;
 }
+
+.fancybox-close {
+	top: -53px;
+	right: 0;
+	width: 32px;
+	height: 32px;
+
+	background: left top no-repeat url("../../assets/img/modal-close.png");
+	opacity: .3;
+	transition: all .1s ease-out;
+
+	&:hover, &:active, &:focus {
+		opacity: 1;
+	}
+}
