--- a/src/templates/reviews.jade
+++ b/src/templates/reviews.jade
@@ -35,7 +35,7 @@ block content
                         .text-center: a.b-reviews__title(href='#') 1ДСКиКО
                         .b-reviews__content
                             .b-review.b-review_video
-                                a.b-review__link(href='#'): img.img-responsive(src='http://placehold.it/320x180')
+                                a.b-review__link(href='http://www.youtube.com/watch?v=opj24KnzrWo'): img.img-responsive(src='http://placehold.it/320x180')
                         .b-reviews__footer
                             span.b-reviews__date 22 июня 2016
                             a.b-reviews__link(href='#') Оригинал отзыва
@@ -45,7 +45,7 @@ block content
                         .text-center: a.b-reviews__title(href='#') Газелькин
                         .b-reviews__content.b-reviews__content_type_image
                             .b-review.b-review_image
-                                a.b-review__link(href='#'): img.img-responsive(src='http://placehold.it/196x264')
+                                a.b-review__link(href='#review_1'): img.img-responsive(src='http://placehold.it/196x264')
                         .b-reviews__footer
                             span.b-reviews__date 5 февраля 2015
                             a.b-reviews__link(href='#') Оригинал отзыва
@@ -128,3 +128,8 @@ block content
                         .b-reviews__footer
                             span.b-reviews__date 11 января 2015
                             a.b-reviews__link(href='#') Оригинал отзыва
+
+        #review_1
+            .b-review-image
+                .b-review-image__container
+                    img(src="http://placehold.it/592x793", alt="")
