add modals to reviews

--- a/src/templates/reviews.jade
+++ b/src/templates/reviews.jade
@@ -129,7 +129,8 @@ block content
                             span.b-reviews__date 11 января 2015
                             a.b-reviews__link(href='#') Оригинал отзыва
 
-        #review_1
-            .b-review-image
-                .b-review-image__container
-                    img(src="http://placehold.it/592x793", alt="")
+        .hidden
+            #review_1
+                .b-review-image
+                    .b-review-image__container
+                        img(src="http://placehold.it/592x793", alt="")
