--- a/src/templates/reviews.jade
+++ b/src/templates/reviews.jade
@@ -128,6 +128,9 @@ block content
                         .b-reviews__footer
                             span.b-reviews__date 11 января 2015
                             a.b-reviews__link(href='#') Оригинал отзыва
+            .b-reviews__loader
+                a.b-reviews__button(href='#'): span.b-reviews__button-text Загрузить ещё
+                        
 
         .hidden
             #review_1
