--- a/src/blocks/b-reviews/b-reviews.less
+++ b/src/blocks/b-reviews/b-reviews.less
@@ -229,7 +229,7 @@
 .b-reviews__loader {
 	background: #f4f9fc;
 	padding: 32px 0 48px;
-	margin-top: -100px;
+	//margin-top: -100px;
 
 	position: relative;
 
