--- a/src/blocks/b-page/b-page.less
+++ b/src/blocks/b-page/b-page.less
@@ -13,6 +13,12 @@
 	font-size: 40px;
 }
 
+.b-page__lead {
+	font-size: 30px;
+	margin-bottom: 40px;
+	text-align: center;
+}
+
 .b-page__link {
 	color: @text-color;
 	border-bottom: 3px solid rgba(37, 37, 37, .05);
