--- a/src/less/bootstrap/variables.less
+++ b/src/less/bootstrap/variables.less
@@ -104,7 +104,7 @@
 @line-height-large:         1.3333333; // extra decimals for Win 8.1 Chrome
 @line-height-small:         1.5;
 
-@border-radius-base:        4px;
+@border-radius-base:        0px;
 @border-radius-large:       0px;
 @border-radius-small:       3px;
 
@@ -205,7 +205,7 @@
 @input-border-focus:             #66afe9;
 
 //** Placeholder text color
-@input-color-placeholder:        #999;
+@input-color-placeholder:        rgba(37, 37, 37, .2);
 
 //** Default `.form-control` height
 @input-height-base:              (@line-height-computed + (@padding-base-vertical * 2) + 2);
