done offer page

--- a/src/templates/offers.jade
+++ b/src/templates/offers.jade
@@ -31,7 +31,7 @@ block content
 
                         .b-offers-filter__title jpg-баннеры
                 .b-offers__list
-                    a.b-offers__item(href='#')
+                    a.b-offers__item(href='offer.html')
                         p.b-offers__title 3 месяца бесплатного использования Jivosite
                         .b-offers__content
                             .b-offers__label Действует до 10.06.2016
@@ -39,7 +39,7 @@ block content
                         .b-offers__text
                             p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
                             p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                    a.b-offers__item(href='#')
+                    a.b-offers__item(href='offer.html')
                         p.b-offers__title 3 месяца бесплатного использования Jivosite
                         .b-offers__content
                             .b-offers__label Действует до 10.06.2016
@@ -47,7 +47,7 @@ block content
                         .b-offers__text
                             p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
                             p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                    a.b-offers__item(href='#')
+                    a.b-offers__item(href='offer.html')
                         p.b-offers__title 3 месяца бесплатного использования Jivosite
                         .b-offers__content
                             .b-offers__label Действует до 10.06.2016
@@ -55,7 +55,7 @@ block content
                         .b-offers__text
                             p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
                             p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                    a.b-offers__item(href='#')
+                    a.b-offers__item(href='offer.html')
                         p.b-offers__title 3 месяца бесплатного использования Jivosite
                         .b-offers__content
                             .b-offers__label Действует до 10.06.2016
@@ -63,7 +63,7 @@ block content
                         .b-offers__text
                             p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
                             p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                    a.b-offers__item(href='#')
+                    a.b-offers__item(href='offer.html')
                         p.b-offers__title 3 месяца бесплатного использования Jivosite
                         .b-offers__content
                             .b-offers__label Действует до 10.06.2016
@@ -71,7 +71,7 @@ block content
                         .b-offers__text
                             p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
                             p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                    a.b-offers__item(href='#')
+                    a.b-offers__item(href='offer.html')
                         p.b-offers__title 3 месяца бесплатного использования Jivosite
                         .b-offers__content
                             .b-offers__label Действует до 10.06.2016
@@ -79,7 +79,23 @@ block content
                         .b-offers__text
                             p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
                             p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                    a.b-offers__item(href='#')
+                    a.b-offers__item(href='offer.html')
+                        p.b-offers__title 3 месяца бесплатного использования Jivosite
+                        .b-offers__content
+                            .b-offers__label Действует до 10.06.2016
+                            img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
+                        .b-offers__text
+                            p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
+                            p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
+                    a.b-offers__item(href='offer.html')
+                        p.b-offers__title 3 месяца бесплатного использования Jivosite
+                        .b-offers__content
+                            .b-offers__label Действует до 10.06.2016
+                            img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
+                        .b-offers__text
+                            p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
+                            p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
+                    a.b-offers__item(href='offer.html')
                         p.b-offers__title 3 месяца бесплатного использования Jivosite
                         .b-offers__content
                             .b-offers__label Действует до 10.06.2016
