--- a/src/blocks/b-text/b-text.less
+++ b/src/blocks/b-text/b-text.less
@@ -11,4 +11,13 @@
 			margin-bottom: 6px;
 		}
 	}
+
+	h1, h2, h3, h4, h5, h6 {
+		margin-top: 35px;
+		margin-bottom: 17px;
+	}
+
+	img {
+		margin: 38px 0;
+	}
 }
