--- a/src/less/bootstrap/variables.less
+++ b/src/less/bootstrap/variables.less
@@ -56,7 +56,7 @@
 @font-size-h1:            floor((@font-size-base * 2.25)); // ~36px
 @font-size-h2:            floor((@font-size-base * 2.15)); // ~30px
 @font-size-h3:            ceil((@font-size-base * 1.7)); // ~24px
-@font-size-h4:            ceil((@font-size-base * 1.25)); // ~18px
+@font-size-h4:            ceil((@font-size-base * 1.33)); // ~18px
 @font-size-h5:            @font-size-base;
 @font-size-h6:            ceil((@font-size-base * 0.85)); // ~12px
 
@@ -151,8 +151,8 @@
 @btn-default-border:             #ccc;
 
 @btn-primary-color:              #fff;
-@btn-primary-bg:                 @brand-primary;
-@btn-primary-border:             darken(@btn-primary-bg, 5%);
+@btn-primary-bg:                 #9c1cae;
+@btn-primary-border:             darken(@btn-primary-bg, 0%);
 
 @btn-success-color:              #fff;
 @btn-success-bg:                 #acc000;
