--- a/src/less/common.less
+++ b/src/less/common.less
@@ -100,6 +100,11 @@ body {
 	border-color: #9eb000;
 }
 
+.btn-primary.active, .btn-primary:active, .btn-primary:hover, .open > .dropdown-toggle.btn-primary {
+	background-color: #841893;
+	border-color: #841893;
+}
+
 .fancybox-close {
 	top: -53px;
 	right: 0;
