done client page

--- a/src/templates/clients.jade
+++ b/src/templates/clients.jade
@@ -9,22 +9,22 @@ block content
             .container
                 .b-clients__list
                     - for (var i=0; i<4;++i)
-                        a.b-clients__item(href='#')
+                        a.b-clients__item(href='client.html')
                             span.b-clients__title Классика
                             .b-clients__content
                                 img.b-clients__image_default(src='assets/img/tmp/client_1_off.png')
                                 img.b-clients__image_hover(src='assets/img/tmp/client_1_on.png')
-                        a.b-clients__item(href='#')
+                        a.b-clients__item(href='client.html')
                             span.b-clients__title MAXPROMO
                             .b-clients__content
                                 img.b-clients__image_default(src='assets/img/tmp/client_2_off.png')
                                 img.b-clients__image_hover(src='assets/img/tmp/client_2_on.png')
-                        a.b-clients__item(href='#')
+                        a.b-clients__item(href='client.html')
                             span.b-clients__title Жулькон
                             .b-clients__content
                                 img.b-clients__image_default(src='assets/img/empty-logo.png')
                                 img.b-clients__image_hover(src='assets/img/empty-logo.png')
-                        a.b-clients__item(href='#')
+                        a.b-clients__item(href='client.html')
                             span.b-clients__title MAXPROMO
                             .b-clients__content
                                 img.b-clients__image_default(src='assets/img/tmp/client_2_off.png')
