--- a/src/blocks/b-portfolio/b-portfolio.less
+++ b/src/blocks/b-portfolio/b-portfolio.less
@@ -118,7 +118,7 @@
 	color: @text-color;
 	display: block;
 	width: 624px;
-	margin: 320px auto 80px;
+	margin: 100px auto;
 	text-align: center;
 	padding: 17px 0;
 
