--- a/src/templates/404.jade
+++ b/src/templates/404.jade
@@ -1,11 +1,8 @@
-doctype html
-html
-    include ./includes/head.jade
-    body.g-bg-dark
-        .b-error
-            p.b-error__code 404
-            p.b-error__caption Ошибка
-            h1.b-error__title Страница не найдена
-            p.b-error__text К сожалению, такой страницы не существует на нашем сайте.
-
-            a.b-error__button(href='index.html') На главную
+extends ./layouts/layout.jade
+block content
+    .b-page
+        .container
+            .b-error
+                p.b-error__title 404
+                p.b-error__text Страница не найдена
+                
