done order page

--- a/src/blocks/b-form/b-form.less
+++ b/src/blocks/b-form/b-form.less
@@ -1,105 +1,77 @@
-@import "variables";
+@import "variables.less";
 @import "mixins";
+@import "mymixins";
 
 .b-form {
-	label {
-		font-weight: normal;
-		font-style: italic;
-		color: #b7b5b1;
-	}
-	.form-control {
-		box-shadow: none !important;
-		//font-size: 16px;
-	}
-
-	.has-error .form-control {
-		border-color: #ffcdd2;
-		background-color: #ffebee;
-	}
+	background: #f5f9fc;
+	margin-top: 5px;
+	padding: 50px 0 60px;
 }
 
-@screen-tablet-vertical: 414px;
+.b-form__form {
+	text-align: center;
 
-.b-form__column {
-	position: relative;
-	float: left;
-	width: 100%;
-	min-height: 1px;
-	padding-left: @grid-gutter-width/2;
-	padding-right: @grid-gutter-width/2;
+	.form-group {
+	}
+	label {
+		font-size: 30px;
+		font-weight: 300;
+		margin-bottom: 18px;
 
-	@media (min-width: @screen-tablet-vertical) {
-		float: none;
-
-		&.b-form__column_1 {
-			float: left;
-			width: 160px;
+		& + .help-block {
+			margin-top: -10px;
 		}
+	}
+	.help-block {
+		color: rgba(37, 37, 37, .5);
+		margin-top: 0;
+		margin-bottom: 12px;
 
-		&.b-form__column_2 {
-			margin-left: 160px;
-			width: auto;
+		a {
+			.mylink(rgba(37, 37, 37, .5), rgba(37, 37, 37, .05), #008fcb);
 		}
+	}
+	.form-control {
+		border-color: #fff;
+		background-color: #fff;
+		box-shadow: 2px 3px 0 rgba(0, 0, 0, .05);
+		font-size: 24px;
+		color: @text-color;
+		padding-left: 22px;
+		padding-right: 22px;
+	}
+	textarea {
+		padding-top: 18px;
+		padding-bottom: 18px;
 	}
 }
 
 .b-form__upload {
-	width: 120px;
-	height: 120px;
-	background: #e0e0e0;
-	line-height: 120px;
-	color: #b7b5b1;
-	text-align: center;
-	position: relative;
-
-	input {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		display: block !important;
-		opacity: 0 !important;
-		overflow: hidden !important;
-		cursor: pointer;
-	}
-}
-
-.b-form__preview-image {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background-size: cover;
-	background-position: center center;
-	background-image: none;
-}
-
-.b-form__preview-delete {
-	position: absolute;
-	top: 10px;
-	right: 10px;
-	width: 19px;
-	height: 19px;
-	background: left top no-repeat url("../../assets/img/form-preview-delete.png");
-	cursor: pointer;
-	opacity: .33;
-
-	&:hover {
-		opacity: .5;
-	}
 }
 
 .b-form__button {
-	margin-top: 5px;
-	text-transform: uppercase;
-	border-radius: 3px;
-	padding: 9px 16px;
+	font-size: 30px;
+	font-weight: bold;
+	background-color: #008fcb !important;
+	border-color: #008fcb !important;
+	padding: 17px 40px;
+	margin-top: 10px;
 
-	&, &:active, &:hover, &:focus {
-		background: #394053;
-		border-color: #394053;
-		color: #ffffff;
+	&:hover, &:active, &:focus {
+		background-color: #007cb5 !important;
+		border-color: #007cb5 !important;
+	}
+}
+
+.b-form__link {
+	display: inline-block;
+	margin-top: 15px;
+	color: rgba(37, 37, 37, .2);
+	border-bottom: 2px solid rgba(37, 37, 37, .05);
+
+	&:hover, &:active, &:focus {
+		text-decoration: none;
+		color: #008fcb;
+		border-bottom-color: #008fcb;
 	}
 }
