--- a/src/blocks/b-subscribe/b-subscribe.less
+++ b/src/blocks/b-subscribe/b-subscribe.less
@@ -51,3 +51,13 @@
 		background-color: #18ad90;
 	}
 }
+
+.b-subscribe_theme_alt {
+	.b-subscribe__button {
+		background-color: #acc000;
+
+		&:hover, &:active, &:focus, &.active {
+			background-color: #9eb000;
+		}
+	}
+}
